NetBSD Problem Report #50860

From www@NetBSD.org  Fri Feb 26 17:40:34 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1860D7ACCE
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 26 Feb 2016 17:40:34 +0000 (UTC)
Message-Id: <20160226174033.423117ACDB@mollari.NetBSD.org>
Date: Fri, 26 Feb 2016 17:40:33 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/isdn/isdnmonitor/main.c: 2 * redundant conditions
X-Send-Pr-Version: www-1.0

>Number:         50860
>Category:       bin
>Synopsis:       src/usr.sbin/isdn/isdnmonitor/main.c: 2 * redundant conditions
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 26 17:45:00 +0000 2016
>Closed-Date:    Fri Feb 26 23:38:45 +0000 2016
>Last-Modified:  Fri Feb 26 23:38:45 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160226
>Organization:
>Environment:
>Description:
1.


[src/usr.sbin/isdn/isdnmonitor/main.c:1172]: (style) Redundant condition: fullscreen. '!fullscreen || (fullscreen && !curses_ready)' is equivalent to '!fullscreen || !curses_ready'

Source code is

    if (!fullscreen || (fullscreen && (!curses_ready)))


2.

[src/usr.sbin/isdn/isdnmonitor/main.c:500]: (style) Redundant condition: debug_noscreen. '!debug_noscreen || (debug_noscreen && strcmp(what,"DBG")!=0)' is equivalent to '!debug_noscreen || strcmp(what,"DBG")!=0'


Source code is

        if ((!debug_noscreen) || (debug_noscreen && (((strcmp(what, "DBG"))) != 0)))



>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50860 CVS commit: src/usr.sbin/isdn/isdnmonitor
Date: Fri, 26 Feb 2016 13:20:00 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Feb 26 18:20:00 UTC 2016

 Modified Files:
 	src/usr.sbin/isdn/isdnmonitor: main.c

 Log Message:
 PR/50860: David Binderman: Remove redundant code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.13 src/usr.sbin/isdn/isdnmonitor/main.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50860 CVS commit: src/usr.sbin/isdn/isdnmonitor
Date: Fri, 26 Feb 2016 13:20:44 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Feb 26 18:20:44 UTC 2016

 Modified Files:
 	src/usr.sbin/isdn/isdnmonitor: main.c

 Log Message:
 PR/50860: David Binderman: Remove redundant code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.13 -r1.14 src/usr.sbin/isdn/isdnmonitor/main.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Fri, 26 Feb 2016 23:38:45 +0000
State-Changed-Why:
Christos fixed it, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.