PR/50860: David Binderman: Remove redundant code.